--- a/public/index-google.html
+++ b/public/index-google.html
@@ -10,41 +10,47 @@
 <body>
     <h1>Google Sign-in</h1>
 
-    <div id="buttonDiv"></div>
+
+<button id="google_signout">
+  Signout
+</button>
 
 
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
+
+  <script>
+      function handleCredentialResponse(response) {
 
 
-    <script>
+          const body = {id_token:response.credential};
 
-        var url = 'http://localhost:3000/api/login/google'
+          //fetch('http://localhost:3000/api/login/google',{
+            fetch('https://restserver-node-nuevo.herokuapp.com/api/auth/google',{
+              method:'POST',
+              headers:{
+                  'Content-Type':'application/json'
+              },
+              body:JSON.stringify(body)
+          })
+              .then(resp => resp.json())
+              .then(resp =>{
+                  console.log(resp)
+                  localStorage.setItem('email',resp.usuario.correo)
+              })
+              .catch(console.warn);
+      }
 
-        function handleCredentialResponse(response) {
-          //console.log("Encoded JWT ID token: " + response.credential);
-          fetch(url,{
-            method:'POST',
-            headers:{'Content-Type':'application/json'},
-            body:JSON.stringify({token:response.credential})
-          })    
-          .then(resp => resp.json())
-          .then(data => console.log('Nuestro server',data))
-          .catch(console.log)
-        }
-        window.onload = function () {
-          google.accounts.id.initialize({
-            client_id: "336467152360-o1sno0tq30qfpjimdc4ck2hnriljrqjr.apps.googleusercontent.com",
-            callback: handleCredentialResponse
+      const button = document.getElementById('google_signout')
+      button.onclick = () =>{
+          console.log( google.accounts.id)
+          google.accounts.id.disableAutoSelect()
+
+          google.accounts.id.revoke(localStorage.getItem('email'),done =>{
+              localStorage.clear();
+              location.reload();
           });
-          google.accounts.id.renderButton(
-            document.getElementById("buttonDiv"),
-            { theme: "outline", size: "large" }  // customization attributes
-          );
-          google.accounts.id.prompt(); // also display the One Tap dialog
-        }
+      }
     </script>
-
-
         
 
 
